Media Q Fixed / Elements aligned

--- a/css/style.css
+++ b/css/style.css
@@ -134,22 +134,3 @@ justify-content: flex-start;
         padding-top: 2%;
     }
 }
-
-
-@media all and (min-width: 768px) and (max-width: 1280px){
-    .side_bar{
-        display: flex;
-        display: inline-block;
-        width: 100%;
-    }
-    .contact_details{
-        text-align: center;
-    }
-    .side_header{
-        margin-top: 5%;
-        margin-bottom: 5%;
-    }
-    .hobbies{
-        padding-top: 2%;
-    }
-}
